--- a/app/res/layout/fragment_connect_learning_progress.xml
+++ b/app/res/layout/fragment_connect_learning_progress.xml
@@ -63,7 +63,7 @@
             android:layout_width="match_parent"
             android:elevation="5dp"
             app:cardCornerRadius="16dp"
-            android:layout_margin="16dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -102,7 +102,6 @@
                     android:background="@android:color/darker_gray"
                     android:id="@+id/divider"
                     android:layout_height="1dp"
-                    android:layout_marginBottom="16dp"
                     android:layout_width="fill_parent" />
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -115,7 +114,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:paddingBottom="16dp">
                         <TextView
                             android:id="@+id/connect_learning_status_text"
                             android:layout_width="match_parent"
@@ -225,57 +225,38 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-
-
-        <TextView
-            android:id="@+id/connect_learning_warning_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_marginTop="20dp"
-            android:text="@string/connect_progress_warning"/>
-
-        <TextView
-            android:id="@+id/connect_learning_warning_learn_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textColor="@color/blue"
-            android:text="@string/connect_progress_warning_learn"/>
-
         <TextView
             android:id="@+id/connect_learning_claim_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             tools:text="@string/connect_learn_claim_label"
-            android:textSize="@dimen/text_large"/>
+            android:textSize="@dimen/text_large"
+            android:visibility="visible"/>
 
         <TextView
             android:id="@+id/connect_learning_ended_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:layout_marginTop="20dp"
             android:textColor="@color/red"
             android:text="@string/connect_learn_warning_ended"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
         <org.commcare.views.connect.RoundedButton
             android:id="@+id/connect_learning_review_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="16dp"
             tools:text="@string/connect_learn_review"
             app:roundButtonTextColor="@color/white"
             app:roundButtonBackgroundColor="@color/connect_blue_color"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
         <org.commcare.views.connect.RoundedButton
             android:id="@+id/connect_learning_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
             app:roundButtonTextColor="@color/white"
             app:roundButtonBackgroundColor="@color/connect_blue_color"
