--- a/app/res/layout/fragment_connect_learning_progress.xml
+++ b/app/res/layout/fragment_connect_learning_progress.xml
@@ -248,7 +248,8 @@
             android:id="@+id/connect_learning_review_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="8dp"
             tools:text="@string/connect_learn_review"
             app:roundButtonTextColor="@color/white"
             app:roundButtonBackgroundColor="@color/connect_blue_color"
@@ -258,6 +259,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="8dp"
             app:roundButtonTextColor="@color/white"
             app:roundButtonBackgroundColor="@color/connect_blue_color"
             tools:text="Button" />
@@ -275,28 +277,15 @@
                 android:padding="16dp"
                 android:orientation="horizontal"
                 android:layout_height="wrap_content">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:orientation="vertical"
+                <TextView
+                    android:id="@+id/connect_job_intro_learning_summary"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:id="@+id/connect_job_intro_start_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/white"
-                        android:textSize="14sp"
-                        android:text="@string/connect_learn_progress_title"/>
-                    <TextView
-                        android:id="@+id/connect_job_intro_learning_summary"
-                        android:layout_width="match_parent"
-                        android:textColor="@color/white"
-                        android:layout_marginTop="16dp"
-                        android:textSize="12sp"
-                        android:text="@string/click_to_sync"
-                        android:layout_height="wrap_content"
-                        />
-                </LinearLayout>
+                    android:textColor="@color/white"
+                    android:layout_marginTop="8dp"
+                    android:textSize="15sp"
+                    android:text="@string/click_to_sync" />
 
                 <org.commcare.views.connect.RoundedButton
                     android:id="@+id/connect_learning_refresh"
