--- a/app/res/layout/fragment_phone_available_bottom_sheet.xml
+++ b/app/res/layout/fragment_phone_available_bottom_sheet.xml
@@ -36,7 +36,7 @@
                     android:textSize="16sp" />
             </LinearLayout>
 
-            <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+            <TextView
                 android:id="@+id/phone_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -46,7 +46,7 @@
                 android:textColor="@color/connect_subtext"
                 android:textSize="20sp" />
 
-            <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="24dp"
