--- a/app/res/layout/item_channel.xml
+++ b/app/res/layout/item_channel.xml
@@ -4,76 +4,88 @@
     android:layout_width="match_parent"
     android:id="@+id/itemRootLayout"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:background="?attr/selectableItemBackground"
+    android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/imgChannel"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        app:cardBackgroundColor="@color/connect_light_grey"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="7dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <org.commcare.views.connect.connecttextview.ConnectMediumTextView
-        android:id="@+id/tvChannelName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Channel Name"
-        android:textColor="@color/black"
-        android:textSize="15sp"
-        app:layout_constraintStart_toEndOf="@+id/imgChannel"
-        app:layout_constraintTop_toTopOf="@+id/imgChannel" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/imgChannel"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            app:cardBackgroundColor="@color/connect_light_grey"
+            app:cardCornerRadius="7dp"
+            app:cardElevation="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <org.commcare.views.connect.connecttextview.ConnectRegularTextView
-        android:id="@+id/tvChannelDescription"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
-        android:text="message preview on top of the card..."
-        android:textColor="@color/connect_grey"
-        android:textSize="13sp"
-        app:layout_constraintEnd_toStartOf="@+id/tvLastChatTime"
-        app:layout_constraintStart_toEndOf="@+id/imgChannel"
-        app:layout_constraintTop_toBottomOf="@+id/tvChannelName" />
+        <org.commcare.views.connect.connecttextview.ConnectMediumTextView
+            android:id="@+id/tvChannelName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="Channel Name"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toEndOf="@+id/imgChannel"
+            app:layout_constraintTop_toTopOf="@+id/imgChannel" />
 
-    <org.commcare.views.connect.connecttextview.ConnectRegularTextView
-        android:id="@+id/tvLastChatTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="10:00"
-        android:layout_marginRight="10dp"
-        android:textColor="@color/connect_grey"
-        android:textSize="13sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+            android:id="@+id/tvChannelDescription"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:text="message preview on top of the card..."
+            android:textColor="@color/connect_grey"
+            android:textSize="13sp"
+            app:layout_constraintEnd_toStartOf="@+id/tvLastChatTime"
+            app:layout_constraintStart_toEndOf="@+id/imgChannel"
+            app:layout_constraintTop_toBottomOf="@+id/tvChannelName" />
 
-    <org.commcare.views.connect.connecttextview.ConnectRegularTextView
-        android:id="@+id/tvUnreadCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/shape_border_10px_blue"
-        android:paddingHorizontal="8dp"
-        android:paddingVertical="2dp"
-        android:text="15"
-        android:textColor="@color/white"
-        android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvLastChatTime" />
+        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+            android:id="@+id/tvLastChatTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="10:00"
+            android:textColor="@color/connect_grey"
+            android:textSize="13sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+            android:id="@+id/tvUnreadCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/shape_border_10px_blue"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="2dp"
+            android:text="15"
+            android:textColor="@color/white"
+            android:textSize="10sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvLastChatTime" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="2dp"
         android:layout_marginHorizontal="10dp"
         android:background="@color/connect_divider_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvUnreadCount" />
+        app:layout_constraintTop_toBottomOf="@+id/constraint" />
 </androidx.constraintlayout.widget.ConstraintLayout>
